samples/_failures_safe/1761193976_a289d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed9d67b3.c: In function ‘main’:
./samples/SAFE/__tmp_ed9d67b3.c:141:10: error: ‘read_matrix’ undeclared (first use in this function); did you mean ‘create_matrix’?
  141 |     if (!read_matrix
      |          ^~~~~~~~~~~
      |          create_matrix
./samples/SAFE/__tmp_ed9d67b3.c:141:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ed9d67b3.c:141:21: error: expected ‘)’ at end of input
  141 |     if (!read_matrix
      |        ~            ^
      |                     )
./samples/SAFE/__tmp_ed9d67b3.c:141:5: error: expected declaration or statement at end of input
  141 |     if (!read_matrix
      |     ^~
